[package]
name = "cgfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jpeg-decoder = "0.1.22"
minifb = "0.19.3"
num_cpus = "1.13"
#rust-computer-graphics-from-scratch = { git = "https://github.com/dariuswiles/rust-computer-graphics-from-scratch"}